--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,9 @@
 {
-  "tabWidth": 3,
-  "useTabs": false,
-  "printWidth": 84,
-  "semi": false,
-  "singleQuote": true,
-  "trailingComma": "es5",
-  "jsxBracketSameLine": true
+   "tabWidth": 3,
+   "useTabs": false,
+   "printWidth": 84,
+   "semi": true,
+   "singleQuote": true,
+   "trailingComma": "es5",
+   "jsxBracketSameLine": true
 }
